2011-04-14  Pavel Feldman  <pfeldman@google.com>

        Reviewed by Yury Semikhatsky.

        Web Inspector: restore previous selection in Resources panel upon front-end reopen.
        https://bugs.webkit.org/show_bug.cgi?id=58533

        * inspector/front-end/ResourceTreeModel.js:
        (WebInspector.ResourceTreeModel.prototype._processCachedResources):
        * inspector/front-end/ResourcesPanel.js:
        (WebInspector.ResourcesPanel.prototype._initDefaultSelection):
        (WebInspector.ResourcesPanel.prototype._populateResourceTree):
        (WebInspector.ResourcesPanel.prototype._cachedResourcesLoaded):
        * inspector/front-end/inspector.css:
        (#close-button-left, #close-button-right):

2011-04-14  Pavel Feldman  <pfeldman@google.com>

        Reviewed by Yury Semikhatsky.

        Web Inspector: implement incremental CSS free flow editing.
        https://bugs.webkit.org/show_bug.cgi?id=58529

        * inspector/front-end/CSSStyleModel.js:
        (WebInspector.CSSStyleSheet.prototype.setText):
        * inspector/front-end/Resource.js:
        (WebInspector.Resource.prototype.isResourceRevision):
        (WebInspector.Resource.prototype.setContent):
        * inspector/front-end/ResourceView.js:
        (WebInspector.CSSSourceFrame.prototype.isContentEditable):
        (WebInspector.CSSSourceFrame.prototype.editContent):
        (WebInspector.CSSSourceFrame.prototype.endEditing.commitIncrementalEdit):
        (WebInspector.CSSSourceFrame.prototype.endEditing):
        * inspector/front-end/SourceFrame.js:
        (WebInspector.SourceFrame.prototype.commitEditing):
        (WebInspector.SourceFrame.prototype.editContent):

2011-04-14  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector:Duplicated display of storage db when running Web SQL from an iframe.
        https://bugs.webkit.org/show_bug.cgi?id=57830
