@@ -1,3 +1,15 @@
+2011-04-14  Diego Gonzalez  <diegohcg@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Improve disable style for input elements in mobile theme
+        https://bugs.webkit.org/show_bug.cgi?id=58480
+
+        * platform/qt/QtMobileWebStyle.cpp:
+        (QtMobileWebStyle::drawControl):
+        (QtMobileWebStyle::drawPrimitive):
+        (QtMobileWebStyle::drawComplexControl):
+
 2011-04-14  Pavel Feldman  <pfeldman@google.com>
 
         Reviewed by Yury Semikhatsky.
